--- a/index.html
+++ b/index.html
@@ -4,23 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Website</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <!-- <nav id="nav-bar">
+    <nav id="nav-bar">
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Pricing</a></li>
         <li><a href="#">Contact</a></li>
-        <div id="vl"></div>
-        <li id="login-btn"><a style="color: red" href="#">Login</a></li>
-        <li id="signup-btn"><a href="#">Sign Up</a></li>
+        <li><a id="login-btn" href="#">Login</a></li>
+        <li><a id="signup-btn" href="#">Get Started</a></li>
       </ul>
     </nav>
 
-   -->
+    <div id="frontPage">
+      <h1 id="title">Lorem <br> Ipsum</h1>
+      <div id="frontPageDescription">
+        <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni incidunt perferendis reiciendis numquam quidem est itaque corrupti quae, rerum eum repellat in vel sapiente animi eaque culpa qui, porro, natus aspernatur. Deserunt fuga vero odit doloribus quia sapiente dicta suscipit magnam voluptates, quam eum dolore sequi, facere repudiandae magni veniam.</h3>
+      </div>
+      <div id="frontPageBtnContainer">
+        <a id="frontPageBtn" href="test.html">Get Started</a>
+      </div>
+    </div>
+   
 
     <div id="main-container">
       <a href="test.html">
