--- a/index.html
+++ b/index.html
@@ -6,75 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+      integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
+      integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <nav id="nav-bar">
-      <ul>
-        <li><a href="test.html">Home</a></li>
-        <li><a href="test.html">About</a></li>
-        <li><a href="test.html">Pricing</a></li>
-        <li><a href="test.html">Contact</a></li>
-        <li><a id="login-btn" href="test.html">Login</a></li>
-        <li><a id="signup-btn" href="test.html">Get Started</a></li>
-      </ul>
+    <nav class="navbar navbar-light bg-light">
+      <div class="container-fluid">
+        <a href="#" class="navbar-brand">Navbar</a>
+      </div>
     </nav>
-
-    <div id="frontPage">
-      <div>
-        <h1 id="title">Simple.<br />Reliable.<br />Secure.</h1>
-        <div id="frontPageDescription">
-          <h3>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo rerum
-            nobis asperiores tempora culpa! Vel ducimus quos officia deserunt
-            aut!
-          </h3>
-        </div>
-        <div id="frontPageBtnContainer">
-          <a id="frontPageBtn" href="test.html">Get Started</a>
-        </div>
-      </div>
-      <div>
-        <img id="iphoneImg" src="img/iphoneMock.dms" alt="">
-      </div>
-    </div>
-
-    <div id="main-container">
-      <a href="test.html">
-        <div class="boxes">
-          <img class="boxes-img" src="https://images.unsplash.com/photo-1620681469593-906882d4e218?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyfHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" alt="">
-        </div>
-      </a>
-      <a href="test.html">
-        <div class="boxes">
-          <img class="boxes-img" src="https://images.unsplash.com/photo-1620681469593-906882d4e218?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyfHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" alt="">
-        </div>
-      </a>
-      <a href="test.html">
-        <div class="boxes">
-          <img class="boxes-img" src="https://images.unsplash.com/photo-1620681469593-906882d4e218?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyfHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" alt="">
-        </div>
-      </a>
-      <a href="test.html">
-        <div class="boxes">
-          <img class="boxes-img" src="https://images.unsplash.com/photo-1620681469593-906882d4e218?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyfHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" alt="">
-        </div>
-      </a>
-      <a href="test.html">
-        <div class="boxes">
-          <img class="boxes-img" src="https://images.unsplash.com/photo-1620681469593-906882d4e218?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyfHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" alt="">
-        </div>
-      </a>
-      <a href="test.html">
-        <div class="boxes">
-          <img class="boxes-img" src="https://images.unsplash.com/photo-1620681469593-906882d4e218?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyfHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" alt="">
-        </div>
-      </a>
-    </div>
-    <footer>
-      <div id="footer-container">
-        <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus sint nostrum laboriosam, iure odit iusto fugit deserunt sequi. Suscipit quaerat ducimus nobis voluptas dolore consectetur maiores omnis facilis pariatur nihil, atque ullam quidem possimus nulla totam quasi itaque laboriosam perspiciatis rem? Magnam velit numquam quisquam praesentium, quia assumenda consequatur quibusdam voluptatum ea consequuntur perferendis fuga, blanditiis, excepturi qui illo provident odit voluptatibus eius? Similique, quaerat possimus nostrum accusamus incidunt eum quidem illo earum sint aliquid tenetur molestiae animi nemo accusantium nisi in velit, laboriosam dolore dicta laudantium. Quis perspiciatis placeat ducimus dolorem facere soluta excepturi nisi, inventore quasi labore veniam explicabo, quisquam architecto nesciunt! Iste impedit alias non magni illum aliquid harum repellendus adipisci mollitia consequuntur quas earum, quaerat commodi dignissimos optio modi praesentium! Autem sit nulla eius eum voluptatibus nisi inventore consequatur qui incidunt, in cumque eveniet, officiis enim architecto, nemo magnam provident repudiandae itaque? Iusto impedit voluptate eos!</div>
-        <h3>2021 © Company LLC</h3>
-      </div>
-    </footer>
   </body>
 </html>
