--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="public/css/main.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,10 +24,38 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a href="#" class="navbar-brand">Navbar</a>
+        <a class="navbar-brand" href="#">Azam Ahmed</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://github.com/Azam999" target="_blank">Github</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
+
+    <div id="main-start">
+      <div class="container">
+        <div id="photo">
+        
+        </div>
+        <div id="info">
+          <h1 class="display-2">Programmer</h1>
+          <p id="description">JavaScript, TypeScript, Java, Python</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
