--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Azam Ahmed</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarText"
+          aria-controls="navbarText"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
@@ -39,7 +47,12 @@
               <a class="nav-link" href="#">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://github.com/Azam999" target="_blank">Github</a>
+              <a
+                class="nav-link"
+                href="https://github.com/Azam999"
+                target="_blank"
+                >Github</a
+              >
             </li>
           </ul>
         </div>
@@ -48,12 +61,28 @@
 
     <div id="main-start">
       <div class="container">
-        <div id="photo">
-        
-        </div>
+        <div id="photo"></div>
         <div id="info">
           <h1 class="display-2">Programmer</h1>
           <p id="description">JavaScript, TypeScript, Java, Python</p>
+          <div id="langs">
+            <img
+              class="lang-logo"
+              src="https://img.icons8.com/color/240/000000/javascript--v2.png"
+            />
+            <img
+              class="lang-logo"
+              src="https://img.icons8.com/color/240/000000/typescript.png"
+            />
+            <img
+              class="lang-logo"
+              src="https://img.icons8.com/color/240/000000/python--v1.png"
+            />
+            <img
+              class="lang-logo"
+              src="https://img.icons8.com/color/240/000000/java-coffee-cup-logo--v1.png"
+            />
+          </div>
         </div>
       </div>
     </div>
