Responsive for all screens

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
     </nav>
 
     <div id="main-start">
-      <div class="container">
+      <div class="container d-flex align-items-center justify-content-lg-between justify-content-center flex-lg-row flex-column">
         <div id="photo"></div>
-        <div id="info">
-          <h1 class="display-2">Programmer</h1>
+        <div id="info" class="d-flex flex-column align-items-center justify-content-center">
+          <h1 class="display-4">Programmer</h1>
           <p id="description">JavaScript, TypeScript, Java, Python</p>
           <div id="langs">
             <img
