Updated css and some text

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-default">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Azam Ahmed</a>
         <button
@@ -39,7 +39,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
             </li>
@@ -63,8 +63,8 @@
       <div class="container d-flex align-items-center justify-content-lg-between justify-content-center flex-lg-row flex-column">
         <div id="photo"></div>
         <div id="info" class="d-flex flex-column align-items-center justify-content-center">
-          <h1 class="display-4">Programmer</h1>
-          <p id="description">JavaScript, TypeScript, Java, Python</p>
+          <h1 class="display-4" id="name">Azam Ahmed</h1>
+          <p id="description">I'm a high school student and an avid programmer. I know JavaScript, TypeScript, Java, Python</p>
           <div id="langs">
             <img
               class="lang-logo"
