--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-default">
+    <nav class="navbar navbar-expand-lg navbar-default navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Azam Ahmed</a>
         <button
