--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Website</title>
+    <title>Azam Ahmed</title>
     <link rel="stylesheet" href="public/css/main.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
@@ -47,6 +47,9 @@
               <a class="nav-link" href="#">Projects</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
               <a
                 class="nav-link"
                 href="https://github.com/Azam999"
@@ -61,7 +64,9 @@
 
     <div id="main-start">
       <div class="container d-flex align-items-center justify-content-lg-between justify-content-center flex-lg-row flex-column">
-        <div id="photo"></div>
+        <div id="photoContainer" >
+          <img id="photo" src="img/azam.jpeg" />
+        </div>
         <div id="info" class="d-flex flex-column align-items-center justify-content-center">
           <h1 class="display-4" id="name">Azam Ahmed</h1>
           <p id="description">I'm a high school student and an avid programmer. I know JavaScript, TypeScript, Java, Python</p>
