Add more sections and change styling

--- a/index.html
+++ b/index.html
@@ -91,44 +91,37 @@
           return new bootstrap.Tooltip(tooltipTriggerEl);
         });
       </script>
-
-      <!-- <div class="container d-flex align-items-center justify-content-lg-between justify-content-center flex-lg-row flex-column">
-        <div id="photoContainer" >
-          <img id="photo" src="img/azam.jpeg" />
-        </div>
-        <div id="info" class="d-flex flex-column align-items-center justify-content-center">
-          <p id="description">I'm a high school student and an avid programmer. I know JavaScript, TypeScript, Java, Python</p>
-          <div id="langs">
-            <img
-              class="lang-logo"
-              src="https://img.icons8.com/color/240/000000/javascript--v2.png"
-            />
-            <img
-              class="lang-logo"
-              src="https://img.icons8.com/color/240/000000/typescript.png"
-            />
-            <img
-              class="lang-logo"
-              src="https://img.icons8.com/color/240/000000/python--v1.png"
-            />
-            <img
-              class="lang-logo"
-              src="https://img.icons8.com/color/240/000000/java-coffee-cup-logo--v1.png"
-            />
-          </div>
-          <div class="mt-2" id="socials">
-            <a href="https://www.linkedin.com/in/azam-ahmed-5185b7226/" target="_blank" class="social-logo">
-              <img src="https://img.icons8.com/ios/50/000000/linkedin.png"/>
-            </a>
-            <a href="https://www.linkedin.com/in/azam-ahmed-5185b7226/" target="_blank" class="social-logo">
-              <img src="https://img.icons8.com/ios/50/000000/twitter.png"/>
-            </a>
-            <a href="https://www.linkedin.com/in/azam-ahmed-5185b7226/" target="_blank" class="social-logo">
-              <img src="https://img.icons8.com/ios/50/000000/twitter.png"/>
-            </a>
-          </div>
-        </div>
-      </div> -->
     </div>
+
+    <div class="block-container mt-5">
+      <div class="card mt-5">
+        <h3 class="sub-title">About</h3>
+        <p class="sub-text">
+          Hey! I'm Azam, a sophomore in high school who is interested in coding,
+          investing, and entrepreneurship. I enjoy full-stack web development
+          and machine learning. Although I mainly use TypeScript, I also love to
+          use JavaScript, Python, Java, and Flutter.
+        </p>
+      </div>
+      <div class="card mt-5">
+        <h3 class="sub-title">Projects</h3>
+        <p class="sub-text">
+          <b>Stox:</b> A command-line interface (CLI) to get stock market data
+          and practice trading/investing.
+          <br>
+          <br>
+          View more projects
+          <a href="https://github.com/Azam999?tab=repositories" target="_blank" class="text-decoration-none">here</a>
+        </p>
+      </div>
+    </div>
+
+    <footer class="mt-5">
+      <div class="d-flex justify-content-end me-3">
+        <div class="footer-text">
+          <p>Created by <b>Azam</b></p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
