--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     ></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
   </head>
   <body>
     <div id="main-start" class="p-4">
@@ -33,19 +34,38 @@
           justify-content-center justify-content-around
           align-items-center
         "
+        id="start"
       >
         <div data-aos="slide-left">
           <a
             href="https://www.linkedin.com/in/azam-ahmed-5185b7226/"
             target="_blank"
+            class="text-decoration-none"
           >
-            <img src="https://img.icons8.com/ios/96/000000/linkedin.png" />
+            <img
+              src="https://img.icons8.com/ios/96/000000/linkedin.png"
+              class="social-logo"
+            />
           </a>
-          <a href="https://twitter.com/Azam_Ahmed999" target="_blank">
-            <img src="https://img.icons8.com/ios/96/000000/twitter.png" />
+          <a
+            href="https://twitter.com/Azam_Ahmed999"
+            target="_blank"
+            class="text-decoration-none"
+          >
+            <img
+              src="https://img.icons8.com/ios/96/000000/twitter.png"
+              class="social-logo"
+            />
           </a>
-          <a href="https://github.com/azam999" target="_blank">
-            <img src="https://img.icons8.com/ios/96/000000/github.png" />
+          <a
+            href="https://github.com/azam999"
+            target="_blank"
+            class="text-decoration-none"
+          >
+            <img
+              src="https://img.icons8.com/ios/96/000000/github.png"
+              class="social-logo"
+            />
           </a>
           <img
             src="https://img.icons8.com/ios/96/000000/discord.png"
@@ -53,9 +73,18 @@
             data-bs-placement="top"
             data-bs-html="true"
             title="Azam999#8069"
+            class="social-logo"
+            class="text-decoration-none"
           />
-          <a href="mailto:aziskool20@gmail.com" target="_blank">
-            <img src="https://img.icons8.com/ios/96/000000/mail.png" />
+          <a
+            href="mailto:aziskool20@gmail.com"
+            target="_blank"
+            class="text-decoration-none"
+          >
+            <img
+              src="https://img.icons8.com/ios/96/000000/mail.png"
+              class="social-logo"
+            />
           </a>
         </div>
         <div id="photoContainer" class="mt-5" data-aos="flip-up">
@@ -86,7 +115,7 @@
       </div>
     </div>
 
-    <div class="block-container mt-5">
+    <div class="block-container mt-5 mb-5">
       <div class="card mt-5" data-aos="slide-up">
         <h3 class="sub-title">About</h3>
         <p class="sub-text">
@@ -134,6 +163,31 @@
       AOS.init({
         duration: 1000,
       });
+    </script>
+
+    <script>
+      var app = document.getElementById('name');
+
+      var typewriter = new Typewriter(app, {
+        loop: true,
+        delay: 75,
+      });
+
+      typewriter
+        .pauseFor(500)
+        .typeString('Azam Ahmed')
+        .pauseFor(3000)
+        .deleteChars(10)
+        .typeString('Full-Stack Web Developer')
+        .pauseFor(2000)
+        .deleteChars(24)
+        .pauseFor(500)
+        .typeString('High School Student')
+        .pauseFor(2000)
+        .deleteChars(19)
+        .typeString('AI Enthusiast')
+        .pauseFor(2000)
+        .start();
     </script>
   </body>
 </html>
