Minor improvements and styling

--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
             data-bs-placement="top"
             data-bs-html="true"
             title="Azam999#8069"
-            class="social-logo"
-            class="text-decoration-none"
+            class="social-logo text-decoration-none"
           />
           <a
             href="mailto:aziskool20@gmail.com"
@@ -119,7 +118,7 @@
       <div class="card mt-5" data-aos="slide-up">
         <h3 class="sub-title">About</h3>
         <p class="sub-text">
-          Hey! I'm Azam, a sophomore in high school who is interested in coding,
+          <b>Hey! I'm Azam</b>, a sophomore in high school who is interested in coding,
           investing, and entrepreneurship. I enjoy full-stack web development
           and machine learning. Although I mainly use TypeScript, I also love to
           use JavaScript, Python, Java, and Flutter.
@@ -128,7 +127,7 @@
       <div class="card mt-5" data-aos="slide-up">
         <h3 class="sub-title">Projects</h3>
         <p class="sub-text">
-          <b>Stox:</b> A command-line interface (CLI) to get stock market data
+          <b><a href="https://github.com/Azam999/Stox" class="text-decoration-none">Stox:</a></b> A command-line interface (CLI) to get stock market data
           and practice trading/investing.
           <br />
           <br />
@@ -162,6 +161,7 @@
     <script>
       AOS.init({
         duration: 1000,
+        offset: 70,
       });
     </script>
 
