Add meta tags and more improvements

--- a/index.html
+++ b/index.html
@@ -4,6 +4,64 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="title" content="Azam Ahmed Personal Website" />
+    <meta
+      name="description"
+      content="Azam is in high school and is interested in coding, investing, and entrepreneurship. I enjoy full-stack web development and machine learning."
+    />
+    <meta
+      name="keywords"
+      content="azam ahmed, azam, ahmed, high school, coding, computer science, computer science club, investing, entrepreneurship, quantum computing, quantum computing club, web developer, web development, full-stack web development, full-stack, full stack, developer, machine learning, GitHub, LinkedIn, Twitter, Discord, Email, javascript, typescript, python, java, flutter, dart, MERN stack, ai, ml, ai enthusiast, student, stox, "
+    />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
+    <meta name="author" content="Azam Ahmed" />
+    <meta name="subject" content="Personal Website" />
+    <meta name="copyright" content="Azam Ahmed" />
+    <meta name="revisit-after" content="1 days" />
+    <meta name="classification" content="Personal Website" />
+    <meta name="distribution" content="Global" />
+    <meta name="rating" content="General" />
+    <meta name="owner" content="Azam Ahmed" />
+    <meta name="url" content="https://azamahmed.tech" />
+    <meta name="identifier-URL" content="https://azamahmed.tech" />
+    <meta name="coverage" content="Worldwide" />
+
+    <!-- OpenGraph Meta -->
+    <meta property="og:title" content="Azam Ahmed Personal Website" />
+    <meta
+      property="og:description"
+      content="Azam is in high school and is interested in coding, investing, and entrepreneurship. I enjoy full-stack web development and machine learning."
+    />
+    <meta property="og:image" content="https://azamahmed.tech/img/azam.jpeg" />
+    <meta property="og:url" content="https://azamahmed.tech" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Meta -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@Azam_Ahmed999" />
+    <meta name="twitter:title" content="Azam Ahmed Personal Website" />
+    <meta
+      name="twitter:description"
+      content="Azam is in high school and is interested in coding, investing, and entrepreneurship. I enjoy full-stack web development and machine learning."
+    />
+    <meta name="twitter:image" content="https://azamahmed.tech/img/azam.jpeg" />
+    <meta name="twitter:url" content="https://azamahmed.tech" />
+
+    <!-- Apple Meta -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta
+      name="apple-mobile-web-app-title"
+      content="Azam Ahmed Personal Website"
+    />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="apple-touch-fullscreen" content="yes" />
+
+    <link rel="icon" href="img/space-invader-icon.png" />
+
     <title>Azam Ahmed</title>
     <link rel="stylesheet" href="public/css/main.css" />
     <link
@@ -118,17 +176,33 @@
       <div class="card mt-5" data-aos="slide-up">
         <h3 class="sub-title">About</h3>
         <p class="sub-text">
-          <b>Hey! I'm Azam</b>, a sophomore in high school who is interested in coding,
-          investing, and entrepreneurship. I enjoy full-stack web development
-          and machine learning. Although I mainly use TypeScript, I also love to
-          use JavaScript, Python, Java, and Flutter.
+          <b>Hey! I'm Azam</b>, a sophomore in high school who is interested in
+          coding, investing, and entrepreneurship. I enjoy full-stack web
+          development and machine learning. Although I mainly use TypeScript, I
+          also love to use JavaScript, Python, Java, and Flutter.
+          <br />
+          <br />
+          Check out my
+          <a
+            href="https://azamahmed.notion.site/Resume-2c63ca85adfd405a91a835de180bd22c"
+            target="_blank"
+            class="text-decoration-none"
+            >resume!</a
+          >
         </p>
       </div>
       <div class="card mt-5" data-aos="slide-up">
         <h3 class="sub-title">Projects</h3>
         <p class="sub-text">
-          <b><a href="https://github.com/Azam999/Stox" class="text-decoration-none">Stox:</a></b> A command-line interface (CLI) to get stock market data
-          and practice trading/investing.
+          <b
+            ><a
+              href="https://github.com/Azam999/Stox"
+              class="text-decoration-none"
+              >Stox:</a
+            ></b
+          >
+          A command-line interface (CLI) to get stock market data and practice
+          trading/investing.
           <br />
           <br />
           View more projects
