Update meta tag descriptions for better SEO

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="title" content="Azam Ahmed Personal Website" />
     <meta
       name="description"
-      content="Azam is in high school and is interested in coding, investing, and entrepreneurship. I enjoy full-stack web development and machine learning."
+      content="Azam Ahmed is a high school students who is interested in coding, investing, and entrepreneurship. Azam enjoys full-stack web development and machine learning, which are exemplified by his projects. Azam Ahmed is a self-taught programmer and has a passion for learning new technologies and languages. His personal website is azamahmed.tech and includes information about Azam Ahmed."
     />
     <meta
       name="keywords"
@@ -33,7 +33,7 @@
     <meta property="og:title" content="Azam Ahmed Personal Website" />
     <meta
       property="og:description"
-      content="Azam is in high school and is interested in coding, investing, and entrepreneurship. I enjoy full-stack web development and machine learning."
+      content="Azam Ahmed is a high school students who is interested in coding, investing, and entrepreneurship. Azam enjoys full-stack web development and machine learning, which are exemplified by his projects. Azam Ahmed is a self-taught programmer and has a passion for learning new technologies and languages. His personal website is azamahmed.tech and includes information about Azam Ahmed."
     />
     <meta property="og:image" content="https://azamahmed.tech/img/azam.jpg" />
     <meta property="og:url" content="https://azamahmed.tech" />
@@ -45,7 +45,7 @@
     <meta name="twitter:title" content="Azam Ahmed Personal Website" />
     <meta
       name="twitter:description"
-      content="Azam is in high school and is interested in coding, investing, and entrepreneurship. I enjoy full-stack web development and machine learning."
+      content="Azam Ahmed is a high school students who is interested in coding, investing, and entrepreneurship. Azam enjoys full-stack web development and machine learning, which are exemplified by his projects. Azam Ahmed is a self-taught programmer and has a passion for learning new technologies and languages. His personal website is azamahmed.tech and includes information about Azam Ahmed."
     />
     <meta name="twitter:image" content="https://azamahmed.tech/img/azam.jpg" />
     <meta name="twitter:url" content="https://azamahmed.tech" />
