--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <meta name="twitter:title" content="Azam Ahmed Personal Website" />
     <meta
       name="twitter:description"
-      content="Azam Ahmed is a high school students who is interested in coding, investing, and entrepreneurship. Azam enjoys full-stack web development and machine learning, which are exemplified by his projects. Azam Ahmed is a self-taught programmer and has a passion for learning new technologies and languages. His personal website is azamahmed.tech and includes information about Azam Ahmed."
+      content="Azam Ahmed is a high school student who is interested in coding, investing, and entrepreneurship. Azam enjoys full-stack web development and machine learning, which are exemplified by his projects. Azam Ahmed is a self-taught programmer and has a passion for learning new technologies and languages. His personal website is azamahmed.tech and includes information about Azam Ahmed."
     />
     <meta name="twitter:image" content="https://azamahmed.tech/img/azam.jpg" />
     <meta name="twitter:url" content="https://azamahmed.tech" />
@@ -168,7 +168,7 @@
       <div class="card mt-5" data-aos="slide-up">
         <h3 class="sub-title">About</h3>
         <p class="sub-text">
-          <b>Hey! I'm Azam</b>, a sophomore in high school who is interested in
+          <b>Hey! I'm Azam</b>, a high school student who is interested in
           coding, investing, and entrepreneurship. I enjoy full-stack web
           development and machine learning. Although I mainly use TypeScript, I
           also love to use JavaScript, Python, Java, and Flutter.
@@ -184,11 +184,88 @@
         </p>
       </div>
       <div class="card mt-5" data-aos="slide-up">
+        <h3 class="sub-title">Leadership</h3>
+        <p class="sub-text">
+          <b><a
+            href="https://neuracode.org"
+            target="_blank"
+            class="text-decoration-none"
+            >Founder & CEO of Neuracode: </a
+          ></b> Neuracode is a nonprofit organization that is on a mission to provide everyone an equal opportunity to learn machine learning. We support students from a variety of backgrounds, including low-income or underrepresented students.
+        </p>
+        <br />
+        <p class="sub-text">
+          <b><a
+            href="https://stemey.org"
+            target="_blank"
+            class="text-decoration-none"
+            >CEO of STEMEY: </a
+          ></b> STEMEY is a high school led nonprofit organization that aims to inspire middle and high school students to pursue STEM and to democratize STEM education.
+        </p>
+        <br />
+        <p class="sub-text">
+          <b><a
+            href="#"
+            target="_blank"
+            class="text-decoration-none"
+            >Executive Officer of Computer Science Club: </a
+          ></b> CS Club teaches students the basics of computer science. I have created Monty Weekly Coding Challenge to increase student engagement with prizes.
+        </p>
+        <br />
+        <p class="sub-text">
+          <b><a
+            href="#"
+            target="_blank"
+            class="text-decoration-none"
+            >Administrator of Quantum Computing Club: </a
+          ></b> QCC Club teaches students the basics of quantum computing. As administrator I have helped with bi-weekly presentations, resources, and emails.
+        </p>
+      </div>
+      <div class="card mt-5" data-aos="slide-up">
+        <h3 class="sub-title">Internships</h3>
+        <p class="sub-text">
+          <b>Ziplyne: Frontend Developer</b> Working as a frontend developer for Ziplyne. Working with other developers to add new features to the website in React.js and improve existing code.
+        </p>
+        <br />
+        <p class="sub-text">
+          <b>Comet: Software Developer</b> Currently performing several flight tests (software user tests) on Comet's web application and learning about entrepreneurship, computer programming, UI/UX design, and marketing. Completing real-world projects and collaborating with other developers to gain insight into their roles and improve the frontend and backend of the website.
+        </p>
+        <br />
+        <p class="sub-text">
+          <b>TCNJ: Machine learning Researcher</b> Currently performing machine learning research with computer vision and deep learning for drones' guidance with quad/hex copters.
+        </p>
+      </div>
+      <div class="card mt-5" data-aos="slide-up">
+        <h3 class="sub-title">Volunteering</h3>
+        <p class="sub-text">
+          <b>Verste: Machine Learning Research Contributor</b> During the summer, I wrote 50+ in-depth book reviews on both fiction and nonfiction books and earned 114.5 hours of community service. These book reviews were submitted to the library website and catalog.
+        </p>
+        <br />
+        <p class="sub-text">
+          <b>Mary Jacobs Library: Book Reviewer</b> Bridging the technical education gap by reading machine learning research papers and simplifying them for students. Research papers often contain complex words that most high school students don't understand, but by volunteering at Verste and simplifying papers, I help anyone understand a research paper about machine learning.
+        </p>
+      </div>
+      <div class="card mt-5" data-aos="slide-up">
+        <h3 class="sub-title">Hackathons</h3>
+        <p class="sub-text">
+          <b>MontyHacks | Recycle It | 1st Place</b> Our team consisted of a total of 3 members, and we worked together to create a mobile application written in Flutter and a machine learning model that uses Tensorflow and OpenCV. The theme of this hackathon was sustainability and this application intends to incentivize the process of recycling by providing tax benefits. When people throw a recyclable item into their recycling bin, it is taken by the recycling truck and analyzed with our machine learning database, which then reports the information about the item recycled and the tax benefits back to the Flutter application through Firebase. The Flutter application reports global data of all the users using Recycle It and compares it to one's own data. Additionally, users can report that they have bought a recyclable item so that the ratio between recycled items bought and recycled items recorded by the recycling truck can be compared. Under the tax benefits section, users can view their total tax deduction and how many items they recycled. The application was deployed to mobile, web, and desktop. After hours of hard work, our team received the 1st place prize.
+
+          <b>Tech Stack:</b> Tensorflow, OpenCV, Flutter, Firebase
+        </p>
+        <br />
+        <p class="sub-text">
+          <b>UPenn HealthHacks | Healthdemic | 3rd Place</b> Created an award-winning web application, Healthdemic, at HealthHacks, and received 3rd place. The goal of this hackathon was to create a mobile or web application that could solve a healthcare problem that is widely faced today. In 36 hours, other team members and I created a web application using the MERN stack along with a few Python scripts. Healthdemic is a one-stop health buddy for use during the pandemic, and has a variety of features, including an AI fitness tracker, mental health chat bot, and AI diet recommendation. The fitness tracker keeps track of the number of reps, time spent, and calories burnt per user. Additionally, the fitness tracker supports four main exercises (push ups, crunches, squats, and bicep curls), which are tracked by computer vision using PoseNet. The next feature is the mental health chat bot that has general information about mental health issues and uses sentiment analysis to send back positive messages whenever a negative message is sent. The last feature, AI diet recommendation, takes in five parameters (weight, height, age, gender, exercise amount) and returns a personalized diet plan.
+
+          <b>Tech stack:</b> MongoDB, Express.js, React.js, Node.js, Python, Twilio API
+        </p>
+      </div>
+      <div class="card mt-5" data-aos="slide-up">
         <h3 class="sub-title">Projects</h3>
         <p class="sub-text">
           <b
             ><a
               href="https://github.com/Azam999/Stox"
+              target="_blank"
               class="text-decoration-none"
               >Stox:</a
             ></b
@@ -226,8 +303,8 @@
     </script>
     <script>
       AOS.init({
-        duration: 1500,
-        offset: 70,
+        duration: 500,
+        offset: 10,
       });
     </script>
 
